cmake_minimum_required(VERSION 2.8)
add_subdirectory(AirwayEnhance)
add_subdirectory(AirwayGenerationStat)
add_subdirectory(AirwayWallIRFCSeeding)
add_subdirectory(BinaryDilate)
add_subdirectory(BinaryErode)
add_subdirectory(BinaryRigidRegistration)
add_subdirectory(BinaryThinningSkeleton)
add_subdirectory(CenterlineLabelPropagate)
add_subdirectory(ConnectComponent)
add_subdirectory(CurvatureAniDiffusion)
add_subdirectory(DicomToAnalyze)
add_subdirectory(DicomToAnalyzeDouble)
add_subdirectory(DistanceTransform)
add_subdirectory(DistanceTransformTwoLabel)
add_subdirectory(ExtractMaskROI)
add_subdirectory(ConstraintSizeROI)
add_subdirectory(ExtractSeed)
add_subdirectory(ExtractSeedAll)
add_subdirectory(ImageMask)
add_subdirectory(ImageMultiply)
add_subdirectory(ImageSubtract)
add_subdirectory(IntensityConversionCT)
add_subdirectory(IntensityRescale255)
add_subdirectory(LabelVolumeCount)
add_subdirectory(LabelDilate)
add_subdirectory(MaskCombine)
add_subdirectory(MaskIntersection)
add_subdirectory(MaskInverse)
add_subdirectory(MaskUnion)
add_subdirectory(MaskAdd)
add_subdirectory(MultiScaleHessianToObject)
add_subdirectory(MultiSeedSingleObjectFuzzyConnInt)
add_subdirectory(MultiSeedSingleObjectFuzzyConnIntGraOnly)
add_subdirectory(MultiSeedSingleObjectFuzzyConnVecAirway)
add_subdirectory(RecoverMaskROI)
add_subdirectory(ReferenceRewrite)
add_subdirectory(ResamplePETCT)
add_subdirectory(SkeletonAna)
add_subdirectory(SliceGrayReconst)
add_subdirectory(SmoothCurveSpline3D)
add_subdirectory(Statistics)
add_subdirectory(Threshold)
add_subdirectory(VoxelCount)
add_subdirectory(CheckVoxel)
add_subdirectory(ResampleRatio)
add_subdirectory(ResampleRatioMask)
add_subdirectory(ResampleIsotropic)
add_subdirectory(ResampleIsotropicMask)
add_subdirectory(MaskGenerateVOI)
add_subdirectory(BSplineDeformableRegistration)
add_subdirectory(ImagePaddingTrimming)
add_subdirectory(ResampleRatio2DRGB)
add_subdirectory(2DSequenceTo3DWithSpacing)
add_subdirectory(RGBtoIntensity)
add_subdirectory(Threshold2D)
add_subdirectory(CropImage)
add_subdirectory(CropImage2D)
add_subdirectory(CropImage2DRGB)
add_subdirectory(PositiveNegativeStats)
add_subdirectory(LungSeparation)
add_subdirectory(LabelCompare)
add_subdirectory(ThresholdFCM)
add_subdirectory(MultiSeedMultiObjectFuzzyConn)
add_subdirectory(AnalyzeToDicom)
add_subdirectory(VoxelMeanIntensity)
add_subdirectory(EdgeDetection)
add_subdirectory(ExtractCenterROI)
add_subdirectory(PickCenterGroup)
add_subdirectory(RidgeLocation)
add_subdirectory(LevelSetShape)
add_subdirectory(LabelOverlapAndDistance)
add_subdirectory(DicomToAnalyzeMultiple)
add_subdirectory(ImageAdd)
add_subdirectory(GenerateROI)
add_subdirectory(FlipImage)
add_subdirectory(BiasCorrectionMRI)
add_subdirectory(NearestPointDT)
add_subdirectory(DistanceTransformPhy)
add_subdirectory(AirwayGenerationBranchSegStat)
add_subdirectory(RandomPairSample3D)
add_subdirectory(RigidMutualInfoRegistration)
add_subdirectory(ExtractCenterSliceFromVol)
add_subdirectory(GaussianSmooth)
add_subdirectory(RegistrationTranslationMeanSquare)
add_subdirectory(RegistrationTranslationMutualInfo)
add_subdirectory(RegistrationTranslationMorphOnly)
add_subdirectory(LobeSeparation)
add_subdirectory(ReorientImage)
add_subdirectory(RelabelLungLR)
add_subdirectory(Mask3DTo4D)
add_subdirectory(ImagePaddingSquare)
add_subdirectory(ExtractAllSlice)
add_subdirectory(ResampleXY)
add_subdirectory(ImageRotation2D)
add_subdirectory(ImageFlip2D)
add_subdirectory(ArtificialNodule)
add_subdirectory(ArtificialNoduleExtractROI)
add_subdirectory(ResampleReference)
add_subdirectory(ArtificialNodulePasteBackROI)
add_subdirectory(ResampleTarget)
add_subdirectory(ResampleTargetMask)
add_subdirectory(HausdorffDistance)
add_subdirectory(LabelOverlapEvaluation)
add_subdirectory(ContourMeanDistance)
add_subdirectory(ExtractGreenChannelRGB)
add_subdirectory(PointToIndex)
add_subdirectory(SliceCombine)
add_subdirectory(ResampleXYSmooth)
add_subdirectory(IntensityMapping)
add_subdirectory(LabelIntensityStat)
add_subdirectory(IntensityMappingAdaptive)
add_subdirectory(GenerateMaskFromImageAndIndex)
