PROJECT(AirwayEnhance)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8) 

FIND_PACKAGE(ITK)
IF(ITK_FOUND)
  INCLUDE(${ITK_USE_FILE})
ENDIF(ITK_FOUND)

ADD_EXECUTABLE(RescaleAirway rescale.cxx)
TARGET_LINK_LIBRARIES(RescaleAirway ${ITK_LIBRARIES})

ADD_EXECUTABLE(MorphEnhance morphEnhance.cxx)
TARGET_LINK_LIBRARIES(MorphEnhance ${ITK_LIBRARIES})

ADD_EXECUTABLE(Inverse inverse.cxx)
TARGET_LINK_LIBRARIES(Inverse ${ITK_LIBRARIES})
