PROJECT(BinaryMeshSmoothing)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8) 

FIND_PACKAGE(ITK)
IF(ITK_FOUND)
  INCLUDE(${ITK_USE_FILE})
ENDIF(ITK_FOUND)

FIND_PACKAGE(VTK)
IF(VTK_FOUND)
  INCLUDE(${USE_VTK_FILE})
ENDIF(VTK_FOUND)

ADD_EXECUTABLE(BinaryMeshSmoothing main.cxx)
TARGET_LINK_LIBRARIES(BinaryMeshSmoothing ${ITK_LIBRARIES})
ADD_EXECUTABLE(VTKMeshSmoothing mainVTK.cxx)
TARGET_LINK_LIBRARIES(VTKMeshSmoothing ${VTK_LIBRARIES})