PROJECT(PaddingAnalyzeToVTK)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8) 

FIND_PACKAGE(ITK)
IF(ITK_FOUND)
  INCLUDE(${ITK_USE_FILE})
ENDIF(ITK_FOUND)

FIND_PACKAGE(VTK)
IF(VTK_FOUND)
  INCLUDE(${USE_VTK_FILE})
ENDIF(VTK_FOUND)

ADD_EXECUTABLE(PaddingAnalyzeToVTK main.cxx)
TARGET_LINK_LIBRARIES(PaddingAnalyzeToVTK ${ITK_LIBRARIES} ${VTK_LIBRARIES})