PROJECT(Phantom3D)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8) 

FIND_PACKAGE(ITK)
IF(ITK_FOUND)
  INCLUDE(${ITK_USE_FILE})
ENDIF(ITK_FOUND)

ADD_EXECUTABLE(Phantom3D main.cxx)
TARGET_LINK_LIBRARIES(Phantom3D ${ITK_LIBRARIES})

ADD_EXECUTABLE(Smooth3D mainSmooth.cxx)
TARGET_LINK_LIBRARIES(Smooth3D ${ITK_LIBRARIES})
