PROJECT(SkeletonAna)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8) 

FIND_PACKAGE(ITK)
IF(ITK_FOUND)
  INCLUDE(${ITK_USE_FILE})
ENDIF(ITK_FOUND)

ADD_EXECUTABLE(IniSkeleton iniSke.cxx)
TARGET_LINK_LIBRARIES(IniSkeleton ${ITK_LIBRARIES})

ADD_EXECUTABLE(GenTree genTree.cxx)
TARGET_LINK_LIBRARIES(GenTree ${ITK_LIBRARIES})

ADD_EXECUTABLE(ReconstTree reconstTree.cxx)
TARGET_LINK_LIBRARIES(ReconstTree ${ITK_LIBRARIES})

ADD_EXECUTABLE(ImageTree imageTree.cxx)
TARGET_LINK_LIBRARIES(ImageTree ${ITK_LIBRARIES})

ADD_EXECUTABLE(ImageTreeSimple imageTreeSimple.cxx)
TARGET_LINK_LIBRARIES(ImageTreeSimple ${ITK_LIBRARIES})

ADD_EXECUTABLE(LevelTree levelTree.cxx)
TARGET_LINK_LIBRARIES(LevelTree ${ITK_LIBRARIES})

ADD_EXECUTABLE(GeodesicTree geodesicTree.cxx)
TARGET_LINK_LIBRARIES(GeodesicTree ${ITK_LIBRARIES})