PROJECT(SliceGrayReconst)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8) 

FIND_PACKAGE(ITK)
IF(ITK_FOUND)
  INCLUDE(${ITK_USE_FILE})
ENDIF(ITK_FOUND)

ADD_EXECUTABLE(SliceGrayReconst main.cxx)
TARGET_LINK_LIBRARIES(SliceGrayReconst ${ITK_LIBRARIES})

ADD_EXECUTABLE(ReconstMaxCombine combineMax.cxx)
TARGET_LINK_LIBRARIES(ReconstMaxCombine ${ITK_LIBRARIES})
