PROJECT(SmoothCurveSpline3D)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8) 

FIND_PACKAGE(ITK)
IF(ITK_FOUND)
  INCLUDE(${ITK_USE_FILE})
ENDIF(ITK_FOUND)

ADD_EXECUTABLE(SmoothCurveSpline3D main.cxx)
TARGET_LINK_LIBRARIES(SmoothCurveSpline3D ${ITK_LIBRARIES})

ADD_EXECUTABLE(SmoothGaussian smooth.cxx)
TARGET_LINK_LIBRARIES(SmoothGaussian ${ITK_LIBRARIES})

ADD_EXECUTABLE(LinearRegression3D linear.cxx)
TARGET_LINK_LIBRARIES(LinearRegression3D ${ITK_LIBRARIES})
